# quiz-application

./: .gitignore  README.md  pyproject.toml
src/: crud.py  database.py  main.py  models.py
src/routers/: questions.py  teams.py
