[tool.poetry]
name = "quiz-application"
version = "0.1.0"
description = ""
authors = ["Simon Kantedal <simon.kantedal@astrazeneca.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
motor = "^3.4.0"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
